--- a/src/modules/shared/presentation/styles/globals.css
+++ b/src/modules/shared/presentation/styles/globals.css
@@ -14,6 +14,16 @@ body {
 
 @layer base {
   :root {
+    --primary-50: #F5F9FF;
+  	--primary-100: #DCE9FE;
+  	--primary-200: #ABCAFD;
+  	--primary-300: #7AABFA;
+  	--primary-400: #498Af8;
+  	--primary-500: #186Af7;
+  	--primary-600: #0C52D3;
+  	--primary-700: #063DA2;
+  	--primary-800: #042A71;
+  	--primary-900: #021740;
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
@@ -82,6 +92,40 @@ body {
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
+}
+
+* {
+  scrollbar-color: var(--primary-600) hsl(var(--muted), 1);
+}
+
+*::-webkit-scrollbar {
+  width: 5px
+}
+
+*::-webkit-scrollbar-track {
+  background-color: hsl(var(--muted));
+  border-radius: 0;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--primary-600);
+  border-radius: 0;
+  
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-color: var(--primary-600)
+    hsl(var(--muted), 1);
+  }
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-500) !important;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: var(--primary-700) !important;
 }
 
 @layer base {
