--- a/src/modules/shared/presentation/styles/globals.css
+++ b/src/modules/shared/presentation/styles/globals.css
@@ -30,8 +30,8 @@ body {
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
+    --skeleton: 0 0% 91%; 
+    --skeleton-foreground: 240 9.9% 14.46%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
