--- a/src/modules/shared/presentation/styles/globals.css
+++ b/src/modules/shared/presentation/styles/globals.css
@@ -14,23 +14,23 @@ body {
 
 @layer base {
   :root {
-    --primary-50: #F5F9FF;
-  	--primary-100: #DCE9FE;
-  	--primary-200: #ABCAFD;
-  	--primary-300: #7AABFA;
-  	--primary-400: #498Af8;
-  	--primary-500: #186Af7;
-  	--primary-600: #0C52D3;
-  	--primary-700: #063DA2;
-  	--primary-800: #042A71;
-  	--primary-900: #021740;
+    --primary-50: #f5f9ff;
+    --primary-100: #dce9fe;
+    --primary-200: #abcafd;
+    --primary-300: #7aabfa;
+    --primary-400: #498af8;
+    --primary-500: #186af7;
+    --primary-600: #0c52d3;
+    --primary-700: #063da2;
+    --primary-800: #042a71;
+    --primary-900: #021740;
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --skeleton: 0 0% 91%; 
+    --skeleton: 0 0% 91%;
     --skeleton-foreground: 240 9.9% 14.46%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
@@ -99,7 +99,7 @@ body {
 }
 
 *::-webkit-scrollbar {
-  width: 5px
+  width: 5px;
 }
 
 *::-webkit-scrollbar-track {
@@ -110,13 +110,11 @@ body {
 *::-webkit-scrollbar-thumb {
   background: var(--primary-600);
   border-radius: 0;
-  
 }
 
 @supports not selector(::-webkit-scrollbar) {
   * {
-    scrollbar-color: var(--primary-600)
-    hsl(var(--muted), 1);
+    scrollbar-color: var(--primary-600) hsl(var(--muted), 1);
   }
 }
 
